--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,6 +55,7 @@ body {
 @media (min-width: 768px) {
   .sidebar .nav {
     margin-top: 1rem !important;
+    top: 0;
   }
 }
 
@@ -76,12 +77,25 @@ body {
   font-weight: 700;
 }
 
-/* Main content */
 .main-content {
-  margin-left: 260px;
   padding: 2rem 3rem;
-  width: calc(100% - 260px); /* ✅ per evitare overflow */
 }
+
+@media (min-width: 768px) {
+  .main-content {
+    margin-left: 260px;
+    width: calc(100% - 260px);
+  }
+}
+
+@media (max-width: 767.98px) {
+  .main-content {
+    margin-left: 0 !important;
+    width: 100% !important;
+    padding: 1rem !important;
+  }
+}
+
 
 .section-card {
   background-color: #ecefff3d !important;
@@ -164,8 +178,10 @@ body {
   opacity: 0.7;
   border-bottom: 1px solid #dee2e6;
 }
+
 @media (min-width: 768px) {
   .sidebar {
-    padding-top: .3rem !important; /* 👈 riduce lo spazio sopra il menu */
+    padding-top: .3rem !important;
+    /* 👈 riduce lo spazio sopra il menu */
   }
 }
